--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^17.3.1",
+    "@react-native-firebase/auth": "^17.3.1",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "react": "18.2.0",
