add user data to database | add paths to babel.config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "@tsconfig/react-native/tsconfig.json",
-  "compilerOptions": {"baseUrl": "./"}
+  "compilerOptions": {"baseUrl": "."},
+  "paths":{
+    "function":["function/*"]
+  }
 }
+
