--- a/package.json
+++ b/package.json
@@ -10,32 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
-
-    "@react-native-community/checkbox": "^0.5.14",
-
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-firebase/auth": "^17.3.1",
     "@react-native-firebase/database": "^17.3.2",
     "@react-native-google-signin/google-signin": "^9.0.2",
-
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@reduxjs/toolkit": "^1.9.3",
     "react": "18.2.0",
     "react-native": "0.71.3",
-
     "react-native-dropdown-select-list": "^2.0.4",
-
     "react-native-element-textinput": "^2.2.0",
-
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
